--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Pro Mern Stack ver 2",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -w server/server.js",
+    "start": "nodemon -w server -e js,graphql ./server/server.js",
     "compile": "babel src --out-dir public",
     "watch": "babel src --out-dir public --watch --verbose",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^2.14.5",
     "express": "^4.17.1",
+    "graphql": "^15.1.0",
     "nodemon": "^2.0.4"
   },
   "devDependencies": {
