--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "apollo-server-express": "^2.14.5",
     "express": "^4.17.1",
     "graphql": "^15.1.0",
+    "mongodb": "^3.6.0",
     "nodemon": "^2.0.4"
   },
   "devDependencies": {
