--- a/ui/package.json
+++ b/ui/package.json
@@ -4,13 +4,14 @@
   "description": "Pro Mern Stack ver 2 -UI",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -w uiserver.js uiserver.js",
+    "start": "nodemon -w uiserver.js -w .env uiserver.js",
     "compile": "babel src --out-dir public",
     "watch": "babel src --out-dir public --watch --verbose"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.4"
   },
