--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "http-proxy-middleware": "^1.0.5",
     "nodemon": "^2.0.4"
   },
   "devDependencies": {
