Front-End Modules and Webpack: Modularize frontend js; Install webpack; bundle js

--- a/ui/src/.eslintrc
+++ b/ui/src/.eslintrc
@@ -5,6 +5,7 @@
     },
     "rules": {
         "react/prop-types": "off",
-        "no-console": "off"
+        "no-console": "off",
+        "import/extensions": [ "error", "always", { "ignorePackages": true } ], // Exception for including extensions in application modules
     }
 }
