--- a/ui/package.json
+++ b/ui/package.json
@@ -26,6 +26,8 @@
     "@babel/preset-react": "^7.10.1",
     "eslint": "^7.7.0",
     "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1"
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   }
 }
