--- a/api/.eslintrc
+++ b/api/.eslintrc
@@ -6,6 +6,6 @@
     "rules": {
         "no-console": "off",
         "camelcase": "off",
-        "indent": ["error", 4]
+        "indent": ["error", 4, {"SwitchCase": 1}]
     }
 }
