--- a/ui/.eslintrc
+++ b/ui/.eslintrc
@@ -4,6 +4,7 @@
         "node": true
     },
     "rules": {
-        "no-console": "off"
+        "no-console": "off",
+        "indent": ["error", 4, {"SwitchCase": 1}]
     }
 }
