--- a/ui/src/.eslintrc
+++ b/ui/src/.eslintrc
@@ -6,6 +6,8 @@
     "rules": {
         "react/prop-types": "off",
         "no-console": "off",
+        "indent": ["error", 4, {"SwitchCase": 1}],
+        "react/jsx-indent": ["error",4],
         "import/extensions": [ "error", "always", { "ignorePackages": true } ], // Exception for including extensions in application modules
     }
 }
