--- a/ui/package.json
+++ b/ui/package.json
@@ -13,12 +13,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "dotenv": "^8.2.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-react": "^7.20.6",
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.5",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "whatwg-fetch": "^3.4.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.1",
@@ -27,6 +30,9 @@
     "@babel/preset-react": "^7.10.1",
     "babel-loader": "^8.1.0",
     "eslint": "^7.7.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "webpack": "^4.44.1",
