--- a/ui/package.json
+++ b/ui/package.json
@@ -5,10 +5,14 @@
   "private": true,
   "main": "uiserver.js",
   "scripts": {
+    "#start": "UI server. HMR is enabled in dev mode.",
     "start": "nodemon -w uiserver.js -w .env uiserver.js",
+    "#lint": "Runs ESLint on all relevant files",
+    "lint": "eslint . --ext js,jsx --ignore-pattern public",
+    "#compile": "Generates JS bundles for production. Use with start.",
     "compile": "webpack --mode production",
-    "watch": "webpack --watch",
-    "lint": "eslint . --ext js,jsx --ignore-pattern public"
+    "#watch": "Compile, and recompile on any changes.",
+    "watch": "webpack --watch"
   },
   "author": "",
   "license": "ISC",
@@ -31,11 +35,13 @@
     "babel-loader": "^8.1.0",
     "eslint": "^7.7.0",
     "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.1.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.0",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0"
   }
 }
