--- a/ui/server/.eslintrc
+++ b/ui/server/.eslintrc
@@ -1,6 +1,9 @@
 {
-    "extends": "airbnb",
+    "env": {
+        "node": true
+    },
     "rules": {
+        "no-console": "off",
         "indent": ["error", 4, {"SwitchCase": 1}]
     }
 }
