--- a/ui/package.json
+++ b/ui/package.json
@@ -34,6 +34,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
+    "react-select": "^3.1.0",
     "whatwg-fetch": "^3.4.0"
   },
   "devDependencies": {
